:recycle: Refactor NewStudyViewFilterUtil